--- a/Hvoinskaya/readme
+++ b/Hvoinskaya/readme
@@ -1,1 +1,16 @@
-My first file
+Папка содержит следующие файлы:
+Детектирование ВОП(MSOffice) - презентация по стажировке в целом и по своей работе в частности.
+
+BB_segment_OBB.ipynb и Convert_BB_segment_OOO.ipynb - отработка скрипта перевода аннотаций из формата YOLO1.1 (Bondining Box) в YOLO OBB (Oriented Bounding Box)
+Cut_video_by_frame.ipynb - скрипт назезки видео на фреймы по степени их различия в соответствии с коэффицентом корреляции
+detect_on_video.py - скрипт тестирования лучшей модели на видео с треккером и без треккера
+скрипт_нарезки_на_кадры_и_сегменты_и_предсказание_ipynb_.py - скрипт нарезки каждого n кадра видео на области 2 строки Х 4 колонки, предсказание в каждом сегменте, объединение кадров 
+
+Следующие файлы - это ноутбуки с сравнительными экспенриментами по обучению и тестированию модели YOLOv8:
+Train_YOLO_BB_augment.ipynb - обучение модели с использованием аугментации
+Train_YOLO_OBB.ipynb - обучение модели на датасете ВОП с разметкой YOLO OBB
+V1_6+1_8_best_hyperparameter+one_class+тестирование_.ipynb - обучение модели на датасете с использованием одного класса ВОП
+V1_6+1_8_доп_18_epoch_best_hyperparameters+тестирование_.ipynb - обучение модели на датасете c подобраннами гиперпараметрами и тестирование на наборе данных из фото заказчика
+SOVMES_train+test.ipynb - обучение модели на датасете 2.5 c подобраннами гиперпараметрами и тестирование на наборе данных из фото заказчика
+VTORMET_train+test_ipynb.ipynb - обучение модели на  датасете 2.7 ( объединение 2.5 с адаптированным датасетом группы старичков) и тестирование на наборе данных из фото заказчика
+5X5_SOVMES+MOSAIC_5X5_train+test.ipynb - обучение модели на  датасете 2.5 c добавлением 500 мозаичных изображений 5х5, тестирование наборе данных, нарезанных из видео заказчика с мелкими ВОП 
